--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@riboseinc/paneron-registry-kit",
-  "version": "1.0.0-dev1",
+  "version": "1.0.0-dev4",
   "main": "index.js",
   "author": "Ribose Inc. <open.source@ribose.com>",
   "scripts": {
@@ -25,9 +25,18 @@
     "@blueprintjs/datetime": "^3.18.2",
     "@blueprintjs/icons": "^3.18.1",
     "@blueprintjs/select": "^3.13.3",
-    "@riboseinc/paneron-plugin-kit": "^1.0.0-dev",
+    "@emotion/core": "^10.0.35",
+    "@riboseinc/paneron-plugin-kit": "^1.0.0-dev2",
+    "@types/js-yaml": "^3.12.5",
+    "@types/node": "^14.11.2",
     "@types/react": "^16.9.11",
+    "@types/react-window": "^1.8.2",
+    "@types/throttle-debounce": "^2.1.0",
+    "electron-log": "^4.2.4",
+    "js-yaml": "^3.14.0",
     "react": "^16.11.0",
+    "react-window": "^1.8.5",
+    "throttle-debounce": "^2.3.0",
     "typescript": "^4.0.2"
   },
   "license": "MIT"
