chore: make it work; release alpha1

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@riboseinc/paneron-registry-kit",
-  "version": "1.0.0-dev4",
+  "version": "1.0.0-alpha1",
   "main": "index.js",
   "author": "Ribose Inc. <open.source@ribose.com>",
   "scripts": {
@@ -10,9 +10,9 @@
     "index.js",
     "index.js.map",
     "index.d.ts",
-    "RegistryView.js",
-    "RegistryView.js.map",
-    "RegistryView.d.ts",
+    "views/*.js",
+    "views/*.js.map",
+    "views/*.d.ts",
     "types/*.js",
     "types/*.js.map",
     "types/*.d.ts"
@@ -26,13 +26,14 @@
     "@blueprintjs/icons": "^3.18.1",
     "@blueprintjs/select": "^3.13.3",
     "@emotion/core": "^10.0.35",
-    "@riboseinc/paneron-plugin-kit": "^1.0.0-dev2",
+    "@riboseinc/paneron-plugin-kit": "^1.0.0-alpha1",
     "@types/js-yaml": "^3.12.5",
     "@types/node": "^14.11.2",
     "@types/react": "^16.9.11",
     "@types/react-window": "^1.8.2",
     "@types/throttle-debounce": "^2.1.0",
     "electron-log": "^4.2.4",
+    "immutability-helper": "^3.1.1",
     "js-yaml": "^3.14.0",
     "react": "^16.11.0",
     "react-window": "^1.8.5",
