--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "types/*.js.map",
     "types/*.d.ts"
   ],
+  "peerDependencies": {
+    "electron": "^10.1.3"
+  },
   "devDependencies": {
     "@babel/cli": "^7.1.5",
     "@babel/core": "^7.4.0",
@@ -32,6 +35,7 @@
     "@types/react": "^16.9.11",
     "@types/react-window": "^1.8.2",
     "@types/throttle-debounce": "^2.1.0",
+    "electron": "^10.1.3",
     "electron-log": "^4.2.4",
     "immutability-helper": "^3.1.1",
     "js-yaml": "^3.14.0",
