--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@blueprintjs/icons": "^3.18.1",
     "@blueprintjs/select": "^3.13.3",
     "@emotion/core": "^10.0.35",
-    "@riboseinc/paneron-extension-kit": "^1.0.2",
+    "@riboseinc/paneron-extension-kit": "=1.0.1",
     "@types/js-yaml": "^3.12.5",
     "@types/node": "^14.11.2",
     "@types/react": "^16.9.11",
