--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "types/*.d.ts"
   ],
   "peerDependencies": {
-    "electron": "^10.1.3"
+    "electron": "^10.1.3",
+    "react-window": "^1.8.5",
+    "throttle-debounce": "^2.3.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.1.5",
