--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@riboseinc/paneron-extension-kit": "2.0.0-dev2",
     "@types/js-yaml": "^3.12.5",
     "@types/node": "^14.11.2",
+    "@types/ramda": "^0.27.35",
     "@types/react": "^16.9.11",
     "@types/react-window": "^1.8.2",
     "@types/throttle-debounce": "^2.1.0",
@@ -40,7 +41,7 @@
     "react": "^16.11.0",
     "react-window": "^1.8.5",
     "throttle-debounce": "^2.3.0",
-    "typescript": "^4.0.2"
+    "typescript": "^4.1.3"
   },
   "license": "MIT"
 }
