--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@riboseinc/paneron-registry-kit",
-  "version": "2.0.0-dev2",
+  "version": "2.0.0-dev3",
   "main": "index.js",
   "author": "Ribose Inc. <open.source@ribose.com>",
   "scripts": {
@@ -27,7 +27,7 @@
     "@blueprintjs/select": "^3.13.3",
     "@emotion/core": "^10.0.35",
     "@emotion/styled": "^10.0.0",
-    "@riboseinc/paneron-extension-kit": "file:../extension-kit/dist",
+    "@riboseinc/paneron-extension-kit": "2.0.0-dev10",
     "@types/js-yaml": "^3.12.5",
     "@types/node": "^14.11.2",
     "@types/ramda": "^0.27.35",
