--- a/package.json
+++ b/package.json
@@ -21,10 +21,11 @@
     "@babel/cli": "^7.1.5",
     "@babel/core": "^7.4.0",
     "@babel/preset-env": "^7.4.2",
-    "@blueprintjs/core": "^3.28.2",
-    "@blueprintjs/datetime": "^3.18.2",
-    "@blueprintjs/icons": "^3.18.1",
-    "@blueprintjs/select": "^3.13.3",
+    "@blueprintjs/core": "^3.42.0",
+    "@blueprintjs/datetime": "^3.22.0",
+    "@blueprintjs/icons": "^3.26.0",
+    "@blueprintjs/popover2": "^0.7.0",
+    "@blueprintjs/select": "^3.15.9",
     "@emotion/core": "^10.0.35",
     "@emotion/styled": "^10.0.0",
     "@riboseinc/paneron-extension-kit": "2.0.0-dev15",
