--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     "immutability-helper": "^3.1.1",
     "js-yaml": "^3.14.0",
     "react": "^16.11.0",
+    "react-visual-diff": "^0.4.3",
     "react-window": "^1.8.5",
+    "rough-notation": "^0.5.1",
     "throttle-debounce": "^2.3.0",
     "typescript": "^4.1.3"
   },
