--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "electron-log": "^4.2.4",
     "immutability-helper": "^3.1.1",
     "js-yaml": "^3.14.0",
+    "jsondiffpatch": "^0.4.1",
     "react": "^16.11.0",
     "react-visual-diff": "^0.4.3",
     "react-window": "^1.8.5",
