--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/react": "^16.9.11",
     "@types/react-window": "^1.8.2",
     "@types/throttle-debounce": "^2.1.0",
+    "date-fns": "^2.16.1",
     "electron": "^10.1.3",
     "electron-log": "^4.2.4",
     "immutability-helper": "^3.1.1",
