--- a/package.json
+++ b/package.json
@@ -26,16 +26,16 @@
     "@blueprintjs/icons": "^3.26.0",
     "@blueprintjs/popover2": "^0.7.0",
     "@blueprintjs/select": "^3.15.9",
-    "@emotion/core": "^10.0.35",
-    "@emotion/styled": "^10.0.0",
-    "@riboseinc/paneron-extension-kit": "2.0.0-dev30",
+    "@emotion/react": "^11.4.0",
+    "@emotion/styled": "^11.3.0",
+    "@riboseinc/paneron-extension-kit": "2.0.0-dev31",
     "@types/js-yaml": "^3.12.5",
     "@types/node": "^14.11.2",
     "@types/ramda": "^0.27.35",
     "@types/react": "^16.9.11",
     "@types/react-window": "^1.8.2",
     "@types/throttle-debounce": "^2.1.0",
-    "date-fns": "^2.16.1",
+    "date-fns": "^2.22.1",
     "electron": "^10.1.3",
     "electron-log": "^4.2.4",
     "immutability-helper": "^3.1.1",
@@ -48,5 +48,6 @@
     "throttle-debounce": "^2.3.0",
     "typescript": "^4.1.3"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {}
 }
