--- a/package.json
+++ b/package.json
@@ -48,6 +48,5 @@
     "throttle-debounce": "^2.3.0",
     "typescript": "^4.1.3"
   },
-  "license": "MIT",
-  "dependencies": {}
+  "license": "MIT"
 }
