--- a/package.json
+++ b/package.json
@@ -14,39 +14,42 @@
     "**/*.js.map",
     "**/*.d.ts"
   ],
-  "peerDependencies": {
-    "electron": "^10.1.3"
+  "resolutions": {
+    "@types/react": "17.0.53"
   },
   "devDependencies": {
     "@babel/cli": "^7.1.5",
     "@babel/core": "^7.4.0",
     "@babel/preset-env": "^7.4.2",
-    "@blueprintjs/core": "^3.48.0",
-    "@blueprintjs/datetime": "^3.23.7",
-    "@blueprintjs/icons": "^3.28.0",
-    "@blueprintjs/popover2": "^0.11.2",
-    "@blueprintjs/select": "^3.17.0",
-    "@emotion/react": "^11.4.0",
-    "@emotion/styled": "^11.3.0",
     "@riboseinc/paneron-extension-kit": "2.0.0-dev31",
+    "@blueprintjs/core": "~4.17.6",
+    "@blueprintjs/datetime": "~4.4.25",
+    "@blueprintjs/icons": "~4.14.3",
+    "@blueprintjs/popover2": "~1.13.10",
+    "@blueprintjs/select": "~4.9.10",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@riboseinc/isogit-lfs": "0.1.6",
     "@types/js-yaml": "^3.12.5",
-    "@types/node": "^14.11.2",
+    "@types/node": "^16.11.7",
     "@types/ramda": "^0.27.35",
-    "@types/react": "^16.9.11",
-    "@types/react-window": "^1.8.2",
+    "@types/react": "17.0.53",
+    "@types/react-dom": "^17.0.2",
+    "@types/react-helmet": "^6.1.2",
+    "@types/react-window": "^1.8.5",
     "@types/throttle-debounce": "^2.1.0",
     "date-fns": "^2.22.1",
-    "electron": "^11.4.11",
-    "electron-log": "^4.3.0",
     "immutability-helper": "^3.1.1",
     "js-yaml": "^3.14.0",
     "jsondiffpatch": "^0.4.1",
-    "react": "^16.11.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
     "react-visual-diff": "^0.4.3",
-    "react-window": "^1.8.5",
+    "react-window": "^1.8.8",
     "rough-notation": "^0.5.1",
     "throttle-debounce": "^2.3.0",
-    "typescript": "^4.1.3"
+    "typescript": "~4.6.0"
   },
   "license": "MIT"
 }
