--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "react-visual-diff": "^0.4.3",
     "react-window": "^1.8.8",
     "rough-notation": "^0.5.1",
-    "typescript": "~4.6.0"
+    "typescript": "~4.6.0",
+    "use-debounce": "9.0.4"
   },
   "license": "MIT"
 }
