--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/react-dom": "^17.0.2",
     "@types/react-helmet": "^6.1.2",
     "date-fns": "^2.30.0",
+    "date-fns-tz": "^2.0.0",
     "immutability-helper": "^3.1.1",
     "jsondiffpatch": "^0.4.1",
     "react": "^17.0.2",
